// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExportPDFForm expect to render without error 1`] = `
<div>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Policy
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control pf-m-inline"
      >
        <p
          class="pf-v6-c-content--p"
          data-ouia-component-id="OUIA-Generated-Content-:r1:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Policy Test Name
        </p>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            System data to include
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Non-compliant systems"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:r4:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="non-compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="non-compliant-systems-export-setting"
          >
            Non-compliant systems
          </label>
        </div>
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Systems with unsupported configuration"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:r6:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="unsupported-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="unsupported-systems-export-setting"
          >
            Systems with unsupported configuration
          </label>
        </div>
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Systems never reported"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:r8:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="nonreporting-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="nonreporting-systems-export-setting"
          >
            Systems with no reports
          </label>
        </div>
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Compliant systems"
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:ra:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="compliant-systems-export-setting"
          >
            Compliant systems
          </label>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Rule data to include
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Rule data to include"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:rd:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="failed-rules-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="failed-rules-export-setting"
          >
            Top failed rules (Up to 10)
          </label>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            User notes (optional)
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both"
        >
          <textarea
            aria-invalid="false"
            aria-label="User notes (optional)"
          >
            NOTE
          </textarea>
        </span>
      </div>
    </div>
  </form>
</div>
`;

exports[`ExportPDFForm expect to render without error with different export settings 1`] = `
<div>
  <form
    class="pf-v6-c-form"
    novalidate=""
  >
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Policy
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control pf-m-inline"
      >
        <p
          class="pf-v6-c-content--p"
          data-ouia-component-id="OUIA-Generated-Content-:rg:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Policy Test Name
        </p>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            System data to include
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Non-compliant systems"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:rj:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="non-compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="non-compliant-systems-export-setting"
          >
            Non-compliant systems
          </label>
        </div>
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Systems with unsupported configuration"
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:rl:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="unsupported-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="unsupported-systems-export-setting"
          >
            Systems with unsupported configuration
          </label>
        </div>
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Systems never reported"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:rn:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="nonreporting-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="nonreporting-systems-export-setting"
          >
            Systems with no reports
          </label>
        </div>
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Compliant systems"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:rp:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="compliant-systems-export-setting"
          >
            Compliant systems
          </label>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            Rule data to include
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <div
          class="pf-v6-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Rule data to include"
            checked=""
            class="pf-v6-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-:rs:"
            data-ouia-component-type="PF6/Checkbox"
            data-ouia-safe="true"
            id="failed-rules-export-setting"
            type="checkbox"
          />
          <label
            class="pf-v6-c-check__label"
            for="failed-rules-export-setting"
          >
            Top failed rules (Up to 10)
          </label>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-form__group"
    >
      <div
        class="pf-v6-c-form__group-label"
      >
        <label
          class="pf-v6-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-v6-c-form__label-text"
          >
            User notes (optional)
          </span>
        </label>
          
      </div>
      <div
        class="pf-v6-c-form__group-control"
      >
        <span
          class="pf-v6-c-form-control pf-m-textarea pf-m-resize-both"
        >
          <textarea
            aria-invalid="false"
            aria-label="User notes (optional)"
          >
            NOTE
          </textarea>
        </span>
      </div>
    </div>
  </form>
</div>
`;
